Bug Fixes - fixed first tab name not updating - fix wrapping of tabs to be consistent with toggle buttons
Save button still not working

--- a/static/css/search.css
+++ b/static/css/search.css
@@ -174,12 +174,17 @@ input[type="search"]::-webkit-search-cancel-button {
     background-color: #f3f3f3 !important;
 }
 
-.tab-item {
-    position: relative;
+.nav-tabs {
     border: none;
 }
 
-.tab-item::after {
+.nav-item {
+    position: relative;
+    border: none;
+    width:fit-content;
+}
+
+.nav-item::after {
     content: "";
     position: absolute;
     right: 0;
